--- a/plug-datepicker/css/index.css
+++ b/plug-datepicker/css/index.css
@@ -1,5 +1,5 @@
 .ui-datepicker-wrapper {
-  width: 240px;
+  width: 260px;
   margin: 0 auto;
   font-size: 16px;
   color: #666;
@@ -18,7 +18,7 @@
   font-family: serif;
   font-size: 20px;
   text-decoration: none;
-  width: 20px;
+  width: 40px;
   height: 50px;
   line-height: 50px;
   color: #1abc9c;
@@ -28,9 +28,43 @@
 .ui-datepicker-wrapper .ui-datepicker-header .ui-datepicker-btn:hover {
   background: #ccc;
 }
+.ui-datepicker-wrapper .ui-datepicker-header .ui-datepicker-btn:active {
+  background: #ddd;
+}
 .ui-datepicker-wrapper .ui-datepicker-header .ui-prev {
   float: left;
 }
 .ui-datepicker-wrapper .ui-datepicker-header .ui-next {
   float: right;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table {
+  width: 100%;
+  border-collapse: collapse;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table th,
+.ui-datepicker-wrapper .ui-datepicker-body table td {
+  height: 30px;
+  text-align: center;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table th {
+  font-size: 12px;
+  height: 40px;
+  line-height: 40px;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table td {
+  border: 1px solid #f0f0f0;
+  width: 14%;
+  cursor: pointer;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table td:hover {
+  background: #ccc;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table td:active {
+  background: #ddd;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table tbody tr td:first-child {
+  border-left: none;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table tbody tr td:last-child {
+  border-right: none;
 }
