--- a/css/index.css
+++ b/css/index.css
@@ -6,4 +6,48 @@ body {
   background: #323232;
   font-size: 12px;
   font-family: 'Microsoft Yahei';
+  padding: 100px;
+}
+.tab {
+  width: 300px;
+}
+.tab .tab-nav {
+  height: 30px;
+}
+.tab .tab-nav .active {
+  background: #fff;
+}
+.tab .tab-nav .active a {
+  color: #777;
+}
+.tab .tab-nav li {
+  list-style: none;
+  float: left;
+  margin-right: 5px;
+  background: #767676;
+  border-radius: 3px 3px 0 0;
+}
+.tab .tab-nav li a {
+  display: block;
+  height: 30px;
+  padding: 0 20px;
+  color: #fff;
+  line-height: 30px;
+  text-decoration: none;
+}
+.tab .content-wrap {
+  background-color: #fff;
+  height: 200px;
+  padding: 2px;
+}
+.tab .content-wrap .content-item {
+  width: 100%;
+  height: 200px;
+  display: none;
+}
+.tab .content-wrap .content-item img {
+  height: 100%;
+}
+.tab .content-wrap .current {
+  display: block;
 }
