--- a/less/index.less
+++ b/less/index.less
@@ -6,4 +6,52 @@ body {
 	background: #323232;
 	font-size: 12px;
 	font-family: 'Microsoft Yahei';
+	padding: 100px;
+
+}
+.tab {
+	width: 300px;
+	.tab-nav {
+		height: 30px;
+		.active {
+			background: #fff;
+			a {
+				color: #777;
+			}
+		}
+		li {
+			list-style: none;
+			float: left;
+			margin-right: 5px;
+			background: #767676;
+			border-radius: 3px 3px 0 0;
+			
+			a {
+				display: block;
+				height: 30px;
+				padding: 0 20px;
+				color: #fff;
+				line-height: 30px;
+				text-decoration: none;
+			}
+		}
+
+	}
+	.content-wrap {
+		background-color: #fff;
+		height: 200px;
+		padding: 2px;
+
+		.content-item {
+			width: 100%;
+			height: 200px;
+			display: none;
+			img {
+				height: 100%;
+			}
+		}
+		.current {
+			display: block;
+		}
+	}
 }
