十月十七--界面优化

--- a/plug-datepicker/css/index.css
+++ b/plug-datepicker/css/index.css
@@ -56,6 +56,9 @@
   width: 14%;
   cursor: pointer;
 }
+.ui-datepicker-wrapper .ui-datepicker-body table td .currDay {
+  color: #70D1AA;
+}
 .ui-datepicker-wrapper .ui-datepicker-body table td:hover {
   background: #ccc;
 }
