--- a/plug-datepicker/less/index.less
+++ b/plug-datepicker/less/index.less
@@ -21,7 +21,7 @@
 			line-height: 50px;
 			color: #1abc9c;
 			text-align: center;
-			cursor: pointer; 
+			cursor: pointer;
 		}
 		.ui-datepicker-btn:hover {
 			background: #ccc;
@@ -53,6 +53,9 @@
 				border: 1px solid #f0f0f0;
 				width: 14%;
 				cursor: pointer;
+				.currDay{
+					color: #70D1AA;
+				}
 			}
 			td:hover {
 				background: #ccc;
@@ -71,6 +74,6 @@
 				}
 			}
 		}
-		
+
 	}
 }
