--- a/plug-datepicker/less/index.less
+++ b/plug-datepicker/less/index.less
@@ -1,9 +1,14 @@
+body{
+	position: relative;
+}
 .ui-datepicker-wrapper{
 	width: 260px;
-	margin: 0 auto;
+	//margin: 0 auto;
 	font-size: 16px;
 	color: #666;
 	box-shadow: 2px 2px 8px 2px rgba(128,128,128,.3);
+	display: none;
+	position: absolute;
 	.ui-datepicker-header {
 		height: 50px;
 		line-height: 50px;
@@ -76,4 +81,7 @@
 		}
 
 	}
+}
+.ui-datepicker-wrapper-show {
+	display: block;
 }
