--- a/plug-datepicker/less/index.less
+++ b/plug-datepicker/less/index.less
@@ -56,8 +56,11 @@
 				width: 14%;
 				cursor: pointer;
 			}
-			.currDay{
+			.currMonth{
 				color: #70D1AA;
+			}
+			.currDay {
+				color: red;
 			}
 			td:hover {
 				background: #ccc;
