--- a/plug-datepicker/css/index.css
+++ b/plug-datepicker/css/index.css
@@ -57,8 +57,11 @@
   width: 14%;
   cursor: pointer;
 }
-.ui-datepicker-wrapper .ui-datepicker-body table .currDay {
+.ui-datepicker-wrapper .ui-datepicker-body table .currMonth {
   color: #70D1AA;
+}
+.ui-datepicker-wrapper .ui-datepicker-body table .currDay {
+  color: red;
 }
 .ui-datepicker-wrapper .ui-datepicker-body table td:hover {
   background: #ccc;
